--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-          <title> About Me: Jazmin Can</title>
+          <title> About Me: Jazmin Can</title> :ghost:
   </head>
   <body> 
           <nav>
