--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           </nav>
           <div class="container">
           <div class="introduction">
-                  <h1>Hello, welcome! My name is Jazmin Can!👻</h1>
+                  <h1>Hello, welcome! My name is Jazmin Can!💡</h1>
                             <p>I am an incoming college freshmen student at Santa Monica College. I am planning to pursue Mechanical Emgineering for my undergraduate studies. I am a female first-generation college student from a low-income family. <em>
 Biography</em> Graduated from California Academy of Mathematics and Science. <a href="/experience>I have done a summer internship at Boeing Satellite Systems located in El Segundo, CA.</
 a></p>
