--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
                 <li><a href="/extracurricular">Extracurricular</a></li>
           </ul>
           </nav>
+   
+</div> 
           <div class="container">
           <div class="introduction">
                   <h1>Hello, welcome! My name is Jazmin Can!💡</h1>
@@ -26,6 +28,25 @@ a></p>
 </li>
                     <li><a href="https://github.com/JazminCan02/SEA-Online-Portfolio">github.com/
 JazminCan02</a></li>
+  
+  <div id="Skills" class="tabcontent">
+  <h3>Skills</h3>
+  <p>My skills consists of</p> 
+  <ul> 
+           <li>Python</li>
+           <li>HTML/CSS</li>
+           <li>MultiSIM</li>
+            <li>Autodesk Inventor PRO</li>
+           <li>SolidWorks</li>
+           <li>Machining/Manufacturing</li>
+            <li>Soldering</li>
+            <li>Public Speaking/Communications</li>
+           <li>Management</li>
+     <li></li>
+</ul>
+  
+  
+  
                     </ul>
            </footer>
      </body>
