--- a/index.html
+++ b/index.html
@@ -17,13 +17,11 @@
     body {
       background-color:salmon;
       color:#566573;
-      text-align:center;
+      text-align:left;
       font-size:26px;
       font-family:"Anton", vernon adams; 
       width: 600px;
-      margin: 0 auto;
-      padding: 100 1000px 2000px 1px;
-      border: 5px solid black;
+ 
     }
 
   </style>
