--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
     <style>
     body {
-      background-color:salmon;
+      background-color:peach;
       color:#566573;
       text-align:left;
       font-size:26px;
@@ -35,8 +35,7 @@
                   <h1>Hello, welcome! My name is Jazmin Can!💡</h1>
                             <p>I am an incoming college freshmen student at Santa Monica College. I am planning to pursue Mechanical Emgineering for my undergraduate studies. I am a female first-generation college student from a low-income family. 
  
-  <em>
-More About Me </em> 
+ 
      Graduated from California Academy of Mathematics and Science. <a href="/experience>I have done a summer internship at Boeing Satellite Systems located in El Segundo, CA.</
 a></p>
             </div><!-- /.introduction -->
