--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body> 
           <nav>
           <ul>
-                <li><a href="/">Home</a></li>
+                <li><a href="/">Home</a></li>                    #tab button
                 <li><a href="/experience">Experience</a></li>
                 <li><a href="/education">Education</a></li>
                 <li><a href="/extracurricular">Extracurricular</a></li>
@@ -15,13 +15,15 @@
     
     <style>
     body {
-      background-color:peach;
+      background-color:brown;
       color:#566573;
       text-align:left;
       font-size:26px;
       font-family:"Anton", vernon adams; 
       width: 600px;
- 
+      margin: 0 auto;
+      padding: 100 1000px 2000px 1px;
+      border: 5px solid yellow;
     }
 
   </style>
