--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <body> 
           <nav>
           <ul>
-                <li><a href="/">Home</a></li>                    #tab button
-                <li><a href="/experience">Experience</a></li>
-                <li><a href="/education">Education</a></li>
-                <li><a href="/extracurricular">Extracurricular</a></li>
+                <li><a href="https://jazmincan02.github.io/SEA-Online-Portfolio//">Home</a></li>                   
+                <li><a href="https://blueceleste02.wixsite.com/jcan/work-experience/">Experience</a></li>
+                <li><a href="https://www.linkedin.com/in/jcan02//">LinkedIn</a></li>
+                <li><a href="https://blueceleste02.wixsite.com/jcan/extracuriular/">Extracurricular</a></li>
           </ul>
           </nav>
     
