--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
     <style>
     body {
-      background-color:brown;
+      background-color:aqua;
       color:#566573;
       text-align:left;
       font-size:26px;
