--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
           <ul>
                 <li><a href="https://jazmincan02.github.io/SEA-Online-Portfolio//">Home</a></li>                   
                 <li><a href="https://blueceleste02.wixsite.com/jcan/work-experience/">Experience</a></li>
-                <li><a href="https://www.linkedin.com/in/jcan02//">LinkedIn</a></li>
+                <li><a href="https://www.linkedin.com/in/jcan02/">LinkedIn</a></li>
                 <li><a href="https://blueceleste02.wixsite.com/jcan/extracuriular/">Extracurricular</a></li>
           </ul>
           </nav>
     
     <style>
     body {
-      background-color:aqua;
+      background-color:lavendar;
       color:#566573;
       text-align:left;
       font-size:26px;
@@ -23,7 +23,7 @@
       width: 600px;
       margin: 0 auto;
       padding: 100 1000px 2000px 1px;
-      border: 5px solid yellow;
+      border: 5px solid darkblue;
     }
 
   </style>
