--- a/index.html
+++ b/index.html
@@ -15,15 +15,12 @@
     
     <style>
     body {
-      background-color:lavendar;
+      background-color:plum;
       color:#566573;
       text-align:left;
       font-size:26px;
       font-family:"Anton", vernon adams; 
       width: 600px;
-      margin: 0 auto;
-      padding: 100 1000px 2000px 1px;
-      border: 5px solid darkblue;
     }
 
   </style>
