--- a/index.html
+++ b/index.html
@@ -4,20 +4,23 @@
           <title> About Me: Jazmin Can</title> 
   </head>
   <body> 
+           <style>
           <nav>
           <ul>
+            text-align:left;
                 <li><a href="https://jazmincan02.github.io/SEA-Online-Portfolio//">Home</a></li>                   
                 <li><a href="https://blueceleste02.wixsite.com/jcan/work-experience/">Experience</a></li>
                 <li><a href="https://www.linkedin.com/in/jcan02/">LinkedIn</a></li>
                 <li><a href="https://blueceleste02.wixsite.com/jcan/extracuriular/">Extracurricular</a></li>
           </ul>
           </nav>
+             </style>
     
     <style>
     body {
       background-color:plum;
       color:#566573;
-      text-align:left;
+      text-align:center;
       font-size:26px;
       font-family:"Anton", vernon adams; 
       width: 600px;
