--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     body {
       background-color:plum;
       color:#566573;
-      text-align:center;
+      text-align:left;
       font-size:26px;
       font-family:"Anton", vernon adams; 
       width: 600px;
