--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@ a></p>
             </div><!-- /.container -->
             <footer>
             <ul>
-                    <li><a href="mailto:jazmincan18@gmail.com">email</a>
-</li>
+                    <li><a href="mailto:jazmincan18@gmail.com">em
+ ail</a></li>
                     <li><a href="https://github.com/JazminCan02/SEA-Online-Portfolio">github.com/
 JazminCan02</a></li>
   
