--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ a></p>
             <ul>
                     <li><a href="mailto:jazmincan18@gmail.com">em
  ail</a></li>
-                    <li><a href="https://github.com/JazminCan02/SEA-Online-Portfolio">github.com/
+                    <li><a href="https://github.com/JazminCan02">github.com/
 JazminCan02</a></li>
   
   <div id="Skills" class="tabcontent">
