--- a/index.html
+++ b/index.html
@@ -44,10 +44,8 @@ a></p>
             </div><!-- /.container -->
             <footer>
             <ul>
-                    <li><a href="mailto:jazmincan18@gmail.com">em
- ail</a></li>
-                    <li><a href="https://github.com/JazminCan02">github.com/
-JazminCan02</a></li>
+                    <li><a href="mailto:jazmincan18@gmail.com">email</a></li>
+                    </li>
   
   <div id="Skills" class="tabcontent">
   <h3>Skills</h3>
