--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
                 <li><a href="https://blueceleste02.wixsite.com/jcan/work-experience/">Experience</a></li>
                 <li><a href="https://www.linkedin.com/in/jcan02/">LinkedIn</a></li>
                 <li><a href="https://blueceleste02.wixsite.com/jcan/extracuriular/">Extracurricular</a></li>
+            <li><a href="education/">Education</a></li>
           </ul>
           </nav>
          
@@ -35,11 +36,10 @@
           <div class="container">
           <div class="introduction">
                   <h1>Hello, welcome! My name is Jazmin Can!💡</h1>
-                            <p>I am an incoming college freshmen student at Santa Monica College. I am planning to pursue Mechanical Engineering for my undergraduate studies. I am a female first-generation college student from a low-income family. 
+                            <p>I am an incoming college freshmen student at Santa Monica College. I am planning to pursue Mechanical Engineering for my undergraduate studies. I am a female first-generation college student from a low-income family.Graduated from California Academy of Mathematics and Science. I have done a summer internship at Boeing Satellite Systems located in El Segundo, CA. 
  
  
-     Graduated from California Academy of Mathematics and Science. <a href="/experience>I have done a summer internship at Boeing Satellite Systems located in El Segundo, CA.</
-a></p>
+     Graduated from California Academy of Mathematics and Science. <a href="/education">Click for more...😊 </a></p>
             </div><!-- /.introduction -->
             </div><!-- /.container -->
             <footer>
