--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
           <div class="container">
           <div class="introduction">
                   <h1>Hello, welcome! My name is Jazmin Can!💡</h1>
-                  <p>I am an incoming college freshmen student at Santa Monica College. I am planning to pursue Mechanical Engineering for my undergraduate studies. I am a female first-generation college student from a low-income family.Graduated from California Academy of Mathematics and Science. Graduated from California Academy of Mathematics and Science. I have done a summer internship at Boeing Satellite Systems located in El Segundo, CA. 
-                       <a href="/education">Click for more...😊 </a></p>
+                  <p>I am an incoming college freshmen student at Santa Monica College. I am planning to pursue Mechanical Engineering for my undergraduate studies. I am a female first-generation college student from a low-income family.Graduated from California Academy of Mathematics and Science. <em>Graduated from California Academy of Mathematics and Science.</em> I have 
+ done a summer internship at Boeing Satellite Systems located in El Segundo, CA. <a href="/education">Click for more...😊 </a></p>
             </div><!-- /.introduction -->
             </div><!-- /.container -->
             <footer>
