--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <li><a href="https://blueceleste02.wixsite.com/jcan/work-experience/">Experience</a></li>
                 <li><a href="https://www.linkedin.com/in/jcan02/">LinkedIn</a></li>
                 <li><a href="https://blueceleste02.wixsite.com/jcan/extracuriular/">Extracurricular</a></li>
-            <li><a href="education/">Education</a></li>
+            <li><a href="education">Education</a></li>
           </ul>
           </nav>
          
