--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <li><a href="https://blueceleste02.wixsite.com/jcan/work-experience/">Experience</a></li>
                 <li><a href="https://www.linkedin.com/in/jcan02/">LinkedIn</a></li>
                 <li><a href="https://blueceleste02.wixsite.com/jcan/extracuriular/">Extracurricular</a></li>
-            <li><a href="education">Education</a></li>
+            <li><a href="https://docs.google.com/document/d/142SFRvLJJqq4QUS2VHXTiZhHtj-ZgURH40jm1wT4Yuo/edit?usp=sharing/">Education</a></li>
           </ul>
           </nav>
          
@@ -45,7 +45,7 @@ title: Hank Quinlan, Horrible Cop
           <div class="introduction">
                   <h1>Hello, welcome! My name is Jazmin Can!💡</h1>
                   <p>I am an incoming college freshmen student at Santa Monica College. I am planning to pursue Mechanical Engineering for my undergraduate studies. I am a female first-generation college student from a low-income family.Graduated from California Academy of Mathematics and Science. <em>Graduated from California Academy of Mathematics and Science.</em> I have 
- done a summer internship at Boeing Satellite Systems located in El Segundo, CA. <a href="/education">Click for more...😊 </a></p>
+ done a summer internship at Boeing Satellite Systems located in El Segundo, CA. <a href="/https://docs.google.com/document/d/142SFRvLJJqq4QUS2VHXTiZhHtj-ZgURH40jm1wT4Yuo/edit?usp=sharing">Click for more...😊 </a></p>
             </div><!-- /.introduction -->
             </div><!-- /.container -->
             <footer>
